change of style

--- a/about.html
+++ b/about.html
@@ -187,46 +187,39 @@
     </div>
 </div>
 	<!--End of container for Logo-->
-	  
-    <!--Start of container for Mission-->
-	  <div class="container">
-	    <div class="row">
-	     <div class="d-flex align-items-center">
-		  <div class="col-12 col-md-6 col-xl-4">
-		    <h3 class="mission-about-page"> Mission</h3>
-			  <p>We provide a safe, inclusive space where users can:</p>
-			 <ul>
-			   <li>Read articles</li>
-			   <li>Watch interviews with LGBTQ+ actors and creators</li>
-			   <li>Engage in meaningful discussions about representation,storytelling and more!</li>
-			  </ul>
-			     <p>Whether you are passionate about Queer theatre or simply eager to learn more. Our community welcomes everyone who values diversity on stage.</p>
-			       </div>
-			   </div>
-		    </div>
-	     </div>
-	  <!--End of container for Mission-->
-	  
-	  <!--Start of container for Values-->
-	   <div class="container">
-	    <div class="row">
-	     <div class="d-flex align-items-center">
-		  <div class="col-12 col-md-6 col-xl-4">
-			<h3 class="values-about-page">Values</h3>
-			  <ul>
-			   <li>Authenticity</li>
-			    <li>Learning</li>
-				<li>Accessibility</li>
-			    <li>Inclusivity</li>
-			  </ul>
-			</div>
-		  </div>
-		</div>
-	  </div>
-	  <!--End of container for Values-->
+	
+   <!-- Start of Mission & Values Section -->
+<div class="container-color">
+<div class="container">
+  <div class="row">
+    <!-- Mission Section -->
+    <div class="col-12 col-md-6 col-xl-6">
+      <h3 class="mission-about-page">Mission</h3>
+      <p>We provide a safe, inclusive space where users can:</p>
+      <ul>
+        <li>Read articles</li>
+        <li>Watch interviews with LGBTQ+ actors and creators</li>
+        <li>Engage in meaningful discussions about representation, storytelling, and more!</li>
+      </ul>
+      <p>Whether you are passionate about Queer theatre or simply eager to learn more, our community welcomes everyone who values diversity on stage.</p>
+    </div>
+    <!-- Values Section -->
+    <div class="col-12 col-md-6 col-xl-4">
+      <h3 class="values-about-page">Values</h3>
+      <ul>
+        <li>Authenticity</li>
+        <li>Learning</li>
+        <li>Accessibility</li>
+        <li>Inclusivity</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End of Mission & Values Section -->
 	  
 	  <!--Start of container for Meet the team-->
-	   <div class="container">
+	   <div class="container"> 
 	     <div class="row"> </div> 
 		    <h3 class="meet-the-team-about-page ">Meet the team</h3>
         </div> 
@@ -242,7 +235,7 @@
       </div>
     </div>
   </div>
-	 
+	
 	  <!--End of first container for Meet the team-->
 	  
 	  <!--Start of second container for Meet the team-->
@@ -269,7 +262,10 @@
       </div>
     </div>
   </div>
-	   <!--End of third container for Meet the team-->
+	  <!--End of third container for Meet the team-->
+	  
+	
+	  
 	  
 	  <!--Start of fourth container for Meet the team-->
 	  <div class="column-about-page-meet-the-team">
@@ -298,15 +294,49 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-12">
-          <h5>outncenter</h5>
+        <div class="col-12 col-md-4">
+          	<h5 class="footer">outncenter</h5>
+        </div>
+		<div class="col-5 col-md-3 d-flex align-items-center justify-content-left">
+            <h5 class="footer2">Contact us</h5>
+        </div>
+		<div class="col-5 d-flex align-items-center justify-content-left col-md-3">
+            <h5 class="footer2">Explore</h5>
         </div>
       </div>
-      <div class="row">
-        <div class="col-3">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="large-logo justify-content-start">
-        </div>
-      </div>
+	  <div class="row justify-content-center">
+		<div class="col-1 col-md-4">
+			<img src="images/onc_notext2.svg" style="max-width: 20%;" class="img-fluid" alt="Logo">
+		</div>
+		<div class="col-3 d-flex justify-content-left">
+		  	<ul class="footer2 list-unstyled">
+				<li>Mon-Sun 9:00-17:00</li>
+				<li>+31 6 20 87 45 1</li>
+				<li>
+					<a href="mailto:outncenter@gmail.com" style="text-decoration: none;  color: white;">outncenter@gmail.com</a>
+				</li>
+			</ul>
+		</div>
+		<div class="col-5 d-flex justify-content-left">
+		  	<ul class="footer2 list-unstyled">
+				<li>
+					<a href="index.html" style="text-decoration: none;  color: white;">Home Page</a>
+				</li>
+				<li>
+					<a href="about.html" style="text-decoration: none;  color: white;">About</a>
+				</li>
+				<li>
+				<a href="blog.html" style="text-decoration: none;  color: white;">Blog</a>
+				</li>
+				<li>
+				<a href="profile.html" style="text-decoration: none;  color: white;">Profile</a>
+				</li>
+				<li>
+				<a href="corporate.html" style="text-decoration: none;  color: white;">Corporate</a>
+				</li>
+			</ul>
+		</div>
+	  </div>
     </div>
   </footer>
   <!--footer ends here-->
