change of colour block

--- a/about.html
+++ b/about.html
@@ -189,7 +189,7 @@
 	<!--End of container for Logo-->
 	
    <!-- Start of Mission & Values Section -->
-<div class="container-color">
+<div class="container container-color">
 <div class="container">
   <div class="row">
     <!-- Mission Section -->
