--- a/blog.html
+++ b/blog.html
@@ -170,11 +170,11 @@
     <div class="container">
       	<div class="row">
         	<div class="col-12 col-xl-8">
-          		<img src="images/template1.jpg" class="img-fluid" alt="template">
+          		<img src="images/blog4.jpg" class="img-fluid" alt="template">
 			</div>
 			<div class="col-12 col-xl-4">
-				<h1 class= "outfit-medium">Blog Title 1</h1>
-				<p class= "outfit-medium">summary of blog 1</p>
+				<h1 class= "outfit-medium">Must-See LGBTQ+ Shows Right Now</h1>
+				<p class= "outfit-medium">A roundup of the latest and best gay-themed productions.</p>
         	</div>
       	</div>
 		
@@ -188,35 +188,35 @@
 		
 		<div class="row">
 			<div class="col-12 col-md-6 col-xl-4">
-			 	<img src="images/trial.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">Sexuality isn't a personality! 10 reasons why representation matters.</h1>
-				<p class= "date">29.03.2025</p>
+			 	<img src="images/blog3.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">Queer Theater Fans Speak: Why Representation Matters On Stage</h1>
+				<p class= "date">29.04.2025</p>
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/template2.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">something something</h1>
-				<p>date</p>
+				<img src="images/blog2.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">Inside the Spotlight: Interviews with Queer Theater Stars</h1>
+				<p class= "date">23.04.2025</p>
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/template2.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">Blog Title 4</h1>
-				<p>date</p>
+				<img src="images/blog7.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">The Smartest Ways to Score Theater Tickets</h1>
+				<p class= "date">14.04.2025</p>
 			</div>
 	
 			<div class="col-12 col-md-6 col-xl-4">
-			 	<img src="images/template2.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle" >Blog Title 5</h1>
-				<p>date</p>
+			 	<img src="images/blog1.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle" >From the Fringe to Broadway: How LGBTQ+ Stories Shape the Stage</h1>
+				<p class= "date">02.04.2025</p>
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/template2.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">Blog Title 6</h1>
-				<p>date</p>
+				<img src="images/blog5.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">Breaking Barriers: LGBTQ+ Playwrights Changing the Theater Scene</h1>
+				<p class= "date">25.03.2025</p>
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
-				<img src="images/template2.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">Blog Title 7</h1>
-				<p>date</p>
+				<img src="images/blog6.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">The Evolution of LGBTQ+ Representation in Theater</h1>
+				<p class= "date">13.03.2025</p>
 			</div>
 		</div>
 		
