--- a/profile.html
+++ b/profile.html
@@ -199,54 +199,39 @@
   <!--main for your content stops here-->
 
   <!--footer navigation starts here-->
- <footer>
+ <footer class="bg-blue text-white py-4">
     <div class="container">
-      <div class="row">
-        <div class="col-4">
-          	<h5 class="footer">outncenter</h5>
+        <div class="row">
+            <!-- Brand Logo & Name -->
+            <div class="col-md-4 text-center text-md-start">
+                <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
+                <h5 class="mt-2">outncenter</h5>
+            </div>
+
+            <!-- Contact Information -->
+            <div class="col-md-4 text-center footer2">
+                <h5>Contact</h5>
+                <p><a href="mailto:outncenter@gmail.com" style="text-decoration: none;  color: white;">outncenter@gmail.com</a></p>
+                <p>Phone: +31 6 20 87 45 1</p>
+                <p>Address: 12 Grote Markt, Breda</p>
+            </div>
+
+            <!-- Explore (Navigation Links) -->
+            <div class="col-md-4 text-center text-md-end">
+                <h5>Explore</h5>
+                <ul class="list-unstyled footer2">
+                    <li><a href="index.html" style="text-decoration: none;  color: white;">Home Page</a></li>
+                    <li><a href="about.html" style="text-decoration: none;  color: white;">About</a></li>
+                    <li><a href="blog.html" style="text-decoration: none;  color: white;">Blog</a></li>
+                    <li><a href="profile.html" style="text-decoration: none;  color: white;">Profile</a></li>
+					<li><a href="corporate.html" style="text-decoration: none;  color: white;">Corporate</a></li>
+                </ul>
+            </div>
         </div>
-		<div class="col-3 d-flex align-items-center justify-content-left">
-            <h5 class="footer2">Contact us</h5>
-        </div>
-		<div class="col-5 d-flex align-items-center justify-content-left">
-            <h5 class="footer2">Explore</h5>
-        </div>
-      </div>
-	  <div class="row justify-content-center">
-		<div class="col-4">
-			
-		</div>
-		<div class="col-3 d-flex justify-content-left">
-		  	<ul class="footer2 list-unstyled">
-				<li>Mon-Sun 9:00-17:00</li>
-				<li>+31 6 20 87 45 18</li>
-				<li>
-					<a href="mailto:outncenter@gmail.com" style="text-decoration: none;  color: white;">outncenter@gmail.com</a>
-				</li>
-			</ul>
-		</div>
-		<div class="col-5 d-flex justify-content-left">
-		  	<ul class="footer2 list-unstyled">
-				<li>
-					<a href="index.html" style="text-decoration: none;  color: white;">Main Page</a>
-				</li>
-				<li>
-					<a href="about.html" style="text-decoration: none;  color: white;">About</a>
-				</li>
-				<li>
-				<a href="blog.html" style="text-decoration: none;  color: white;">Blog</a>
-				</li>
-				<li>
-				<a href="profile.html" style="text-decoration: none;  color: white;">Profile</a>
-				</li>
-				<li>
-				<a href="corporate.html" style="text-decoration: none;  color: white;">Corporate</a>
-				</li>
-			</ul>
-		</div>
-	  </div>
+        <hr class="my-3 border-light">
+        <p class="text-center footer2 mb-0">© 2025 outncenter. All Rights Reserved.</p>
     </div>
-  </footer>
+</footer>
   <!--footer ends here-->
 
   <!--your script starts here-->
