--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
               viewBox="0 0 16 16">
               <path
-                d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
+                d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
             </svg>
           </a>
         </button>
@@ -149,148 +149,156 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre_shows/red_musical.jpg" class="d-block w-100 images-about-page-carousel-first" alt="red musical advertisement">
+        <img src="images/theatre_shows/red_musical.jpg" class="d-block w-100 images-about-page-carousel-first"
+          alt="red musical advertisement">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./images/theatre_shows/musical_picture.jpg" class="d-block w-100 images-about-page-carousel-second" alt="musical advertisement">
+        <img src="./images/theatre_shows/musical_picture.jpg" class="d-block w-100 images-about-page-carousel-second"
+          alt="musical advertisement">
       </div>
       <div class="carousel-item">
-        <img src="./images/theatre_shows/theatre_show.jpg" class="d-block w-100 images-about-page-carousel-third" alt="theatre drag show advertisement">
+        <img src="./images/theatre_shows/theatre_show.jpg" class="d-block w-100 images-about-page-carousel-third"
+          alt="theatre drag show advertisement">
       </div>
     </div>
   </div>
-<!--End of navigations-->
+  <!--End of navigations-->
 
-<!--Main for your content and text starts here-->
-  <main >
-
+  <!--Main for your content and text starts here-->
+  <main class="flex-grow-1">
     <!--Container for about-->
-     <div class="container">
-       <div class="row">
-          <div class="col-12 col-md-6 col-xl-4">
-            <h2 class="about-font-size">About</h2>
-	     </div>
-	   </div>
-    </div> 
-	<!--End of container for about-->
-	
-	 <!--Start of container for vision-->
-	<div class="container">
-    <div class="row d-flex align-items-center">
+    <div class="container">
+      <div class="row">
         <div class="col-12 col-md-6 col-xl-4">
-            <h3 class="vision-about-page">Vision</h3>
-            <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+          <h2>About</h2>
+        </div>
+      </div>
+    </div>
+    <!--End of container for about-->
+
+    <!--Start of container for vision-->
+    <div class="container">
+      <div class="row d-flex align-items-center">
+        <div class="col-12 col-md-6 col-xl-4">
+          <h3 class="vision-about-page">Vision</h3>
+          <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight
+            on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
         </div>
         <div class="col-12 col-md-6 col-xl-4 text-center">
-            <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo image-logo logo-about-page">
+          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo image-logo logo-about-page">
         </div>
-    </div>
-</div>
-	<!--End of container for Logo-->
-	
-   <!-- Start of Mission & Values Section -->
-<div class="container container-color">
-<div class="container">
-  <div class="row">
-    <!-- Mission Section -->
-    <div class="col-12 col-md-6 col-xl-6">
-      <h3 class="mission-about-page">Mission</h3>
-      <p>We provide a safe, inclusive space where users can:</p>
-      <ul>
-        <li>Read articles</li>
-        <li>Watch interviews with LGBTQ+ actors and creators</li>
-        <li>Engage in meaningful discussions about representation, storytelling, and more!</li>
-      </ul>
-      <p>Whether you are passionate about Queer theatre or simply eager to learn more, our community welcomes everyone who values diversity on stage.</p>
-    </div>
-    <!-- Values Section -->
-    <div class="col-12 col-md-6 col-xl-4">
-      <h3 class="values-about-page">Values</h3>
-      <ul>
-        <li>Authenticity</li>
-        <li>Learning</li>
-        <li>Accessibility</li>
-        <li>Inclusivity</li>
-        </ul>
       </div>
     </div>
-  </div>
-</div>
-<!-- End of Mission & Values Section -->
-	  
-	  <!--Start of container for Meet the team-->
-	   <div class="container"> 
-	     <div class="row"> </div> 
-		    <h3 class="meet-the-team-about-page ">Meet the team</h3>
-        </div> 
-        
-	  <!--Start of first container for Meet the team-->
-	  <div class="column-about-page-meet-the-team">
-      <div class="card">
-         <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
-           <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
-             <h5 class="text-center">Freya Willems</h5>
-            <p class="text-center">Web developer</p>
-          <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
-      </div>
-    </div>
-  </div>
-	
-	  <!--End of first container for Meet the team-->
-	  
-	  <!--Start of second container for Meet the team-->
-	  <div class="column-about-page-meet-the-team">
-        <div class="card">
-         <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
-          <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
-        <h5 class="text-center">Dániel Horváth </h5>
-      <p class="text-center">Web developer</p>
-    <p class="text-center">Some text that describes me lorem ipsum ipsum lorem.</p>
-    </div>
-       </div>
-           </div>
-	   <!--End  of second container for Meet the team-->
-	  
-	   <!--Start of third container for Meet the team-->
-   <div class="column-about-page-meet-the-team">
-      <div class="card">
-         <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
-           <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
-             <h5 class="text-center">Elena Beganović </h5>
-            <p class="text-center">Web developer</p>
-          <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
-      </div>
-    </div>
-  </div>
-	  <!--End of third container for Meet the team-->
-	  
-	
-	  
-	  
-	  <!--Start of fourth container for Meet the team-->
-	  <div class="column-about-page-meet-the-team">
-      <div class="card">
-         <img src="images/pink_carousel.webp" alt="Mees de Wilde" style="width:100%">
-           <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
-             <h5 class="text-center">Mees de Wilde</h5>
-            <p class="text-center">Web developer</p>
-          <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
-      </div>
-    </div>
-  </div>
-	  
-	  <!--End of fourth container for Meet the team-->
-	  
-	  <!--End of container for Meet the team-->
-	  
-      <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
+    <!--End of container for Logo-->
+
+    <!-- Start of Mission & Values Section -->
+    <div class="container about-container-color">
+      <div class="container">
+        <div class="row">
+          <!-- Mission Section -->
+          <div class="col-12 col-md-6 col-xl-6">
+            <h3 class="mission-about-page">Mission</h3>
+            <p>We provide a safe, inclusive space where users can:</p>
+            <ul>
+              <li>Read articles</li>
+              <li>Watch interviews with LGBTQ+ actors and creators</li>
+              <li>Engage in meaningful discussions about representation, storytelling, and more!</li>
+            </ul>
+            <p>Whether you are passionate about Queer theatre or simply eager to learn more, our community welcomes
+              everyone who values diversity on stage.</p>
+          </div>
+          <!-- Values Section -->
+          <div class="col-12 col-md-6 col-xl-4">
+            <h3 class="values-about-page">Values</h3>
+            <ul>
+              <li>Authenticity</li>
+              <li>Learning</li>
+              <li>Accessibility</li>
+              <li>Inclusivity</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End of Mission & Values Section -->
+
+    <!--Start of container for Meet the team-->
+  
+    <div class="container">
+      <h3 class="meet-the-team-about-page ">Meet the team</h3>
+      <div class="row">
+          <!--Start of first container for Meet the team-->
+          <div class="column-about-page-meet-the-team">
+                <div class="card">
+                    <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
+                    <div
+                class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
+                        <h5 class="text-center">Freya Willems</h5>
+                        <p class="text-center">Web developer</p>
+                        <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
+                      </div>
+                  </div>
+              </div>
+
+          <!--End of first container for Meet the team-->
+
+          <!--Start of second container for Meet the team-->
+          <div class="column-about-page-meet-the-team">
+                <div class="card">
+                    <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
+                    <div
+                class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
+                        <h5 class="text-center">Dániel Horváth </h5>
+                      <p class="text-center">Web developer</p>
+                    <p class="text-center">Some text that describes me lorem ipsum ipsum lorem.</p>
+                    </div>
+                  </div>
+              </div>
+          <!--End  of second container for Meet the team-->
+
+          <!--Start of third container for Meet the team-->
+          <div class="column-about-page-meet-the-team">
+                <div class="card">
+                    <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
+                    <div
+                class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
+                        <h5 class="text-center">Elena Beganović </h5>
+                        <p class="text-center">Web developer</p>
+                        <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
+                      </div>
+                  </div>
+              </div>
+          <!--End of third container for Meet the team-->
+
+
+          <!--Start of fourth container for Meet the team-->
+          <div class="column-about-page-meet-the-team">
+                <div class="card">
+                    <img src="images/pink_carousel.webp" alt="Mees de Wilde" style="width:100%">
+                    <div
+                class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
+                        <h5 class="text-center">Mees de Wilde</h5>
+                        <p class="text-center">Web developer</p>
+                        <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
+                      </div>
+                  </div>
+              </div>
+
+          <!--End of fourth container for Meet the team-->
+      </div>
+    </div>
    
-    
+
+    <!--End of container for Meet the team-->
+
+    <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
+
+
   </main>
   <!--main for your content stops here-->
 
-	
-   <!--footer navigation starts here-->
+
+  <!--footer navigation starts here-->
   <footer>
     <div class="container">
       <div class="row">
@@ -300,7 +308,7 @@
 		<div class="col-5 col-md-3 d-flex align-items-center justify-content-left">
             <h5 class="footer2">Contact us</h5>
         </div>
-		<div class="col-5 d-flex align-items-center justify-content-left col-md-3">
+		<div class="col-5 d-flex align-items-center justify-content-left">
             <h5 class="footer2">Explore</h5>
         </div>
       </div>
