title blog page font semi-bold

--- a/blog.html
+++ b/blog.html
@@ -173,7 +173,7 @@
           		<img src="images/blog4.jpg" class="img-fluid" alt="template">
 			</div>
 			<div class="col-12 col-xl-4">
-				<h1 class= "outfit-medium">Must-See LGBTQ+ Shows Right Now</h1>
+				<h4 class= "outfit-semibold">Must-See LGBTQ+ Shows Right Now</h4>
 				<p class= "outfit-medium">A roundup of the latest and best gay-themed productions.</p>
         	</div>
       	</div>
