changes of content

--- a/about.html
+++ b/about.html
@@ -167,19 +167,8 @@
   <!--Main for your content and text starts here-->
   <main class="flex-grow-1">
     <!--Container for about-->
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
     <div class="container">
       <div class="row">
-=======
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
      <div class="container container-about-page">
        <div class="row">
           <div class="col-12 col-md-6 col-xl-4">
@@ -189,25 +178,6 @@
     </div> 
 	<!--End of container for about-->
 	
-	 <!--Start of container for vision-->
-	<div class="container container-about-page">
-    <div class="row row-about-page d-flex align-items-center">
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
-=======
->>>>>>> Stashed changes
-        <div class="col-12 col-md-6 col-xl-4">
-          <h2>About</h2>
-        </div>
-      </div>
-    </div>
-    <!--End of container for about-->
 
     <!--Start of container for vision-->
     <div class="container">
@@ -220,82 +190,10 @@
         <div class="col-12 col-md-6 col-xl-4 text-center">
           <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo image-logo logo-about-page">
         </div>
-<<<<<<< Updated upstream
-=======
+
     </div>
 </div>
 	<!--End of container for Logo-->
-	
-   <!-- Start of Mission & Values Section -->
-<div class="container-color container container-about-page">
-  <div>
-    <div class="row row-about-page">
-      <!-- Mission Section -->
-      <div class="col-12 col-md-6 col-xl-6">
-        <h3 class="mission-about-page">Mission</h3>
-        <p>We provide a safe, inclusive space where users can:</p>
-        <ul>
-          <li>Read articles</li>
-          <li>Watch interviews with LGBTQ+ actors and creators</li>
-          <li>Engage in meaningful discussions about representation, storytelling, and more!</li>
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
-=======
-=======
-        </ul>
-        <p>Whether you are passionate about Queer theatre or simply eager to learn more, our community welcomes everyone who values diversity on stage.</p>
-      </div>
-      <!-- Values Section -->
-      <div class="col-12 col-md-6 col-xl-4">
-        <h3 class="values-about-page">Values</h3>
-        <ul>
-          <li>Authenticity</li>
-          <li>Learning</li>
-          <li>Accessibility</li>
-          <li>Inclusivity</li>
->>>>>>> Stashed changes
-        </ul>
-        <p>Whether you are passionate about Queer theatre or simply eager to learn more, our community welcomes everyone who values diversity on stage.</p>
-      </div>
-      <!-- Values Section -->
-      <div class="col-12 col-md-6 col-xl-4">
-        <h3 class="values-about-page">Values</h3>
-        <ul>
-          <li>Authenticity</li>
-          <li>Learning</li>
-          <li>Accessibility</li>
-          <li>Inclusivity</li>
->>>>>>> Stashed changes
-        </ul>
-        <p>Whether you are passionate about Queer theatre or simply eager to learn more, our community welcomes everyone who values diversity on stage.</p>
-      </div>
-      <!-- Values Section -->
-      <div class="col-12 col-md-6 col-xl-4">
-        <h3 class="values-about-page">Values</h3>
-        <ul>
-          <li>Authenticity</li>
-          <li>Learning</li>
-          <li>Accessibility</li>
-          <li>Inclusivity</li>
->>>>>>> Stashed changes
-        </ul>
-        <p>Whether you are passionate about Queer theatre or simply eager to learn more, our community welcomes everyone who values diversity on stage.</p>
-      </div>
-      <!-- Values Section -->
-      <div class="col-12 col-md-6 col-xl-4">
-        <h3 class="values-about-page">Values</h3>
-        <ul>
-          <li>Authenticity</li>
-          <li>Learning</li>
-          <li>Accessibility</li>
-          <li>Inclusivity</li>
-        </ul>
->>>>>>> Stashed changes
-      </div>
-    </div>
-    <!--End of container for Logo-->
 
     <!-- Start of Mission & Values Section -->
     <div class="container about-container-color">
@@ -325,14 +223,12 @@
           </div>
         </div>
       </div>
-    </div>
     <!-- End of Mission & Values Section -->
 
     <!--Start of container for Meet the team-->
-  
     <div class="container">
       <h3 class="meet-the-team-about-page ">Meet the team</h3>
-      <div class="row">
+      <div>
           <!--Start of first container for Meet the team-->
           <div class="column-about-page-meet-the-team">
                 <div class="card">
@@ -345,6 +241,8 @@
                       </div>
                   </div>
               </div>
+		  </div>
+		</div>
 
           <!--End of first container for Meet the team-->
 
@@ -360,6 +258,7 @@
                     </div>
                   </div>
               </div>
+	     
           <!--End  of second container for Meet the team-->
 
           <!--Start of third container for Meet the team-->
@@ -378,6 +277,7 @@
 
 
           <!--Start of fourth container for Meet the team-->
+		<div class= "row"></div>
           <div class="column-about-page-meet-the-team">
                 <div class="card">
                     <img src="images/pink_carousel.webp" alt="Mees de Wilde" style="width:100%">
@@ -389,17 +289,10 @@
                       </div>
                   </div>
               </div>
-
           <!--End of fourth container for Meet the team-->
-      </div>
-    </div>
-   
-
     <!--End of container for Meet the team-->
 
     <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
-
-
   </main>
   <!--main for your content stops here-->
 
