--- a/about.html
+++ b/about.html
@@ -234,8 +234,8 @@
                 <div class="card">
                     <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
                     <div
-                class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
-                        <h5 class="text-center">Freya Willems</h5>
+                class="container-meet-the-team-about-page text-within-card-about-page">
+                        <h5 class="text-center about-the-team-font-size">Freya Willems</h5>
                         <p class="text-center">Web developer</p>
                         <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
                       </div>
@@ -251,8 +251,8 @@
                 <div class="card">
                     <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
                     <div
-                class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
-                        <h5 class="text-center">Dániel Horváth </h5>
+                class="container-meet-the-team-about-page text-within-card-about-page">
+                        <h5 class="text-center about-the-team-font-size">Dániel Horváth </h5>
                       <p class="text-center">Web developer</p>
                     <p class="text-center">Some text that describes me lorem ipsum ipsum lorem.</p>
                     </div>
@@ -266,8 +266,8 @@
                 <div class="card">
                     <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
                     <div
-                class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
-                        <h5 class="text-center">Elena Beganović </h5>
+                class="text-within-card-about-page">
+                        <h5 class="text-center about-the-team-font-size">Elena Beganović </h5>
                         <p class="text-center">Web developer</p>
                         <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
                       </div>
@@ -280,10 +280,10 @@
 		<div class= "row"></div>
           <div class="column-about-page-meet-the-team">
                 <div class="card">
-                    <img src="images/pink_carousel.webp" alt="Mees de Wilde" style="width:100%">
+                    <img src="images/portraits/portrait-mees.jpg" alt="Mees de Wilde" style="width:100%">
                     <div
-                class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
-                        <h5 class="text-center">Mees de Wilde</h5>
+                class="container-meet-the-team-about-page text-within-card-about-page">
+                        <h5 class="text-center about-the-team-font-size">Mees de Wilde</h5>
                         <p class="text-center">Web developer</p>
                         <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
                       </div>
