--- a/about.html
+++ b/about.html
@@ -190,7 +190,6 @@
         <div class="col-12 col-md-6 col-xl-4 text-center">
           <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo image-logo logo-about-page">
         </div>
-
     </div>
 </div>
 	<!--End of container for Logo-->
@@ -227,23 +226,21 @@
 
     <!--Start of container for Meet the team-->
     <div class="container">
-      <h3 class="meet-the-team-about-page ">Meet the team</h3>
+      <h3 class="meet-the-team-about-page">Meet the team</h3>
       <div>
           <!--Start of first container for Meet the team-->
           <div class="column-about-page-meet-the-team">
                 <div class="card">
                     <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
                     <div
-                class="container-meet-the-team-about-page text-within-card-about-page">
+                class="text-within-card-about-page">
                         <h5 class="text-center about-the-team-font-size">Freya Willems</h5>
                         <p class="text-center">Web developer</p>
-                        <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
                       </div>
                   </div>
               </div>
 		  </div>
 		</div>
-
           <!--End of first container for Meet the team-->
 
           <!--Start of second container for Meet the team-->
@@ -251,14 +248,12 @@
                 <div class="card">
                     <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
                     <div
-                class="container-meet-the-team-about-page text-within-card-about-page">
+                class="text-within-card-about-page">
                         <h5 class="text-center about-the-team-font-size">Dániel Horváth </h5>
                       <p class="text-center">Web developer</p>
-                    <p class="text-center">Some text that describes me lorem ipsum ipsum lorem.</p>
                     </div>
                   </div>
               </div>
-	     
           <!--End  of second container for Meet the team-->
 
           <!--Start of third container for Meet the team-->
@@ -267,9 +262,8 @@
                     <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
                     <div
                 class="text-within-card-about-page">
-                        <h5 class="text-center about-the-team-font-size">Elena Beganović </h5>
-                        <p class="text-center">Web developer</p>
-                        <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
+                        <h5 class="text-center about-the-team-font-size">Elena Beganović</h5>
+						<p class="text-center">Web developer</p>
                       </div>
                   </div>
               </div>
@@ -282,10 +276,9 @@
                 <div class="card">
                     <img src="images/portraits/portrait-mees.jpg" alt="Mees de Wilde" style="width:100%">
                     <div
-                class="container-meet-the-team-about-page text-within-card-about-page">
+                class="text-within-card-about-page">
                         <h5 class="text-center about-the-team-font-size">Mees de Wilde</h5>
                         <p class="text-center">Web developer</p>
-                        <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
                       </div>
                   </div>
               </div>
