change of content in meet the team

--- a/about.html
+++ b/about.html
@@ -184,8 +184,8 @@
       <div class="row d-flex align-items-center">
         <div class="col-12 col-md-6 col-xl-4">
           <h3 class="vision-about-page">Vision</h3>
-          <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight
-            on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+          <p>In the world of theatre where LGBTQ+ characters are    often misrepresented, we believe in shining spotlight
+          on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
         </div>
         <div class="col-12 col-md-6 col-xl-4 text-center">
           <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo image-logo logo-about-page">
@@ -195,8 +195,7 @@
 	<!--End of container for Logo-->
 
     <!-- Start of Mission & Values Section -->
-    <div class="container about-container-color">
-      <div class="container">
+    <div class="container">
         <div class="row">
           <!-- Mission Section -->
           <div class="col-12 col-md-6 col-xl-6">
@@ -225,65 +224,64 @@
     <!-- End of Mission & Values Section -->
 
     <!--Start of container for Meet the team-->
-    <div class="container">
-      <h3 class="meet-the-team-about-page">Meet the team</h3>
-      <div>
-          <!--Start of first container for Meet the team-->
-          <div class="column-about-page-meet-the-team">
-                <div class="card">
-                    <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
-                    <div
-                class="text-within-card-about-page">
-                        <h5 class="text-center about-the-team-font-size">Freya Willems</h5>
-                        <p class="text-center">Web developer</p>
-                      </div>
-                  </div>
-              </div>
-		  </div>
-		</div>
-          <!--End of first container for Meet the team-->
-
-          <!--Start of second container for Meet the team-->
-          <div class="column-about-page-meet-the-team">
-                <div class="card">
-                    <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
-                    <div
-                class="text-within-card-about-page">
-                        <h5 class="text-center about-the-team-font-size">Dániel Horváth </h5>
-                      <p class="text-center">Web developer</p>
-                    </div>
-                  </div>
-              </div>
-          <!--End  of second container for Meet the team-->
-
-          <!--Start of third container for Meet the team-->
-          <div class="column-about-page-meet-the-team">
-                <div class="card">
-                    <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
-                    <div
-                class="text-within-card-about-page">
-                        <h5 class="text-center about-the-team-font-size">Elena Beganović</h5>
-						<p class="text-center">Web developer</p>
-                      </div>
-                  </div>
-              </div>
-          <!--End of third container for Meet the team-->
-
-
-          <!--Start of fourth container for Meet the team-->
-		<div class= "row"></div>
-          <div class="column-about-page-meet-the-team">
-                <div class="card">
-                    <img src="images/portraits/portrait-mees.jpg" alt="Mees de Wilde" style="width:100%">
-                    <div
-                class="text-within-card-about-page">
-                        <h5 class="text-center about-the-team-font-size">Mees de Wilde</h5>
-                        <p class="text-center">Web developer</p>
-                      </div>
-                  </div>
-              </div>
-          <!--End of fourth container for Meet the team-->
-    <!--End of container for Meet the team-->
+ 
+     <div class="container">
+       <h3 class="meet-the-team-about-page ">Meet the team</h3>
+       <div class="row">
+    <!--Start of first container for Meet the team-->
+           <div class="column-about-page-meet-the-team">
+                 <div class="card">
+                     <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
+                     <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
+                       <h5 class="text-center heading-five-cards-meet-the-team">Freya Willems</h5>
+                         <p class="text-center">Web developer</p>
+                       </div>
+                   </div>
+               </div>
+ 
+     <!--End of first container for Meet the team-->
+ 
+     <!--Start of second container for Meet the team-->
+           <div class="column-about-page-meet-the-team">
+                 <div class="card">
+                     <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
+                     <div
+                 class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
+                         <h5 class="text-center heading-five-cards-meet-the-team">Dániel Horváth</h5>
+                       <p class="text-center">Web developer</p>
+                     </div>
+                   </div>
+               </div>
+           <!--End  of second container for Meet the team-->
+ 
+           <!--Start of third container for Meet the team-->
+           <div class="column-about-page-meet-the-team">
+                 <div class="card">
+                     <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
+                     <div
+                 class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
+                         <h5 class="text-center heading-five-cards-meet-the-team">Elena Beganović </h5>
+                         <p class="text-center">Web developer</p>
+                       </div>
+                   </div>
+               </div>
+           <!--End of third container for Meet the team-->
+ 
+ 
+           <!--Start of fourth container for Meet the team-->
+           <div class="column-about-page-meet-the-team">
+                 <div class="card">
+                     <img src="images/portraits/portrait-mees.jpg" alt="Mees de Wilde" style="width:100%">
+                     <div
+                 class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
+                         <h5 class="text-center heading-five-cards-meet-the-team">Mees de Wilde</h5>
+                         <p class="text-center">Web developer</p>
+                       </div>
+                   </div>
+               </div>
+ 
+           <!--End of fourth container for Meet the team-->
+     <!--End of container for Meet the team-->
 
     <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
   </main>
