--- a/profile.html
+++ b/profile.html
@@ -166,7 +166,7 @@
     <!--container for about-->
     <div class="container">
     <div class="profile-container">
-        <h5 class="text-center">Create Your Profile</h5>
+        <h4 class="text-center" style="font-size: 20px;">Create Your Profile</h4>
         <form action="profile.html" method="POST">
             <div class="mb-3">
                 <label for="name" class="form-label">Full Name</label>
