--- a/blog.html
+++ b/blog.html
@@ -169,7 +169,7 @@
 	  
     <div class="container">
       	<div class="row">
-        	<div class="col-12 col-xl-8">
+        	<div class="col-12 col-xl-8" style="padding-bottom: 7px;">
           		<img src="images/blog4.jpg" class="img-fluid" alt="template">
 			</div>
 			<div class="col-12 col-xl-4">
