--- a/about.html
+++ b/about.html
@@ -149,16 +149,16 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre_shows/red_musical.jpg" class="d-block w-100 images-about-page-carousel-first"
-          alt="red musical advertisement">
+        <img src="images/theatre_shows/theatre-show-eclipse-hearts.png" class="d-block w-100 images-about-page-carousel-first"
+          alt="eclipse hearts show">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./images/theatre_shows/musical_picture.jpg" class="d-block w-100 images-about-page-carousel-second"
-          alt="musical advertisement">
+        <img src="images/theatre_shows/theatre-show-romeo-and-romeo.png" class="d-block w-100 images-about-page-carousel-second"
+          alt="romeo and romeo show">
       </div>
       <div class="carousel-item">
-        <img src="./images/theatre_shows/theatre_show.jpg" class="d-block w-100 images-about-page-carousel-third"
-          alt="theatre drag show advertisement">
+        <img src="images/theatre_shows/theatre-show-moonlight-call.png" class="d-block w-100 images-about-page-carousel-third"
+          alt="moonlight call show">
       </div>
     </div>
   </div>
@@ -231,7 +231,7 @@
     <!--Start of first container for Meet the team-->
            <div class="column-about-page-meet-the-team">
                  <div class="card">
-                     <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
+                     <img src="images/portraits/portrait-freya.jpg" alt="Freya Willems" style="width:100%">
                      <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
                        <h5 class="text-center heading-five-cards-meet-the-team">Freya Willems</h5>
                          <p class="text-center">Web developer</p>
