--- a/blog.html
+++ b/blog.html
@@ -149,13 +149,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./images/pink_carousel.webp" class="d-block w-100" alt="pink advertisement">
+        <img src="images/theatre_shows/theatre-show-eclipse-hearts.png" class="d-block w-100" alt="eclipse hearts">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./images/teal_carousel.png" class="d-block w-100" alt="teal advertisement">
+        <img src="images/theatre_shows/theatre-show-romeo-and-romeo.png" class="d-block w-100" alt="romeo and romeo show">
       </div>
       <div class="carousel-item">
-        <img src="./images/orange_carousel.png" class="d-block w-100" alt="orange advertisement">
+        <img src="images/theatre_shows/theatre-show-moonlight-call.png" class="d-block w-100" alt="moonlight call show">
       </div>
     </div>
   </div>
