--- a/about.html
+++ b/about.html
@@ -244,7 +244,7 @@
      <!--Start of second container for Meet the team-->
            <div class="column-about-page-meet-the-team">
                  <div class="card">
-                     <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
+                     <img src="images/portraits/portrait-daniel.jpg" alt="Dániel Horváth " style="width:100%">
                      <div
                  class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
                          <h5 class="text-center heading-five-cards-meet-the-team">Dániel Horváth</h5>
