--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
           on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
         </div>
         <div class="col-12 col-md-6 col-xl-4 text-center">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo image-logo logo-about-page">
+          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid logo-about-page">
         </div>
     </div>
 </div>
