change of corporate page

--- a/corporate.html
+++ b/corporate.html
@@ -149,7 +149,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./images/pink_carousel.webp" class="d-block w-100" alt="pink advertisement">
+        <img src="images/pink_carousel.webp" class="d-block w-100" alt="pink advertisement">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
         <img src="./images/teal_carousel.png" class="d-block w-100" alt="teal advertisement">
@@ -167,42 +167,123 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2>corporate</h2>
+          <h2 class="corporate-font-size">Corporate</h2>
           <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.youtube.com/watch%3Fv%3D6AYv6rV3NXE&ved=2ahUKEwjbgIjQk6aMAxUy-gIHHfFJBcAQz40FegQIEhAI&usg=AOvVaw1VGYu_HLv_gFhdyYI-6nxX?go=1" target="_blank" style=" color: black">
             work in progress
-          </a>
-          </p>
+			</a>
         </div>
       </div>
-            <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
+	  <!-- add table of contents here -->
+      <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
       <div class="row">
         <div class="col-12">
           <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo justify-content-end">
         </div>
       </div>
     </div>
-    <!--end container for about-->
+	
+<!--start of content here -->
+	<!--content part of the course-->
+	<!--start of title of the container--> 
+	 <div class="container">
+       <div class="row">
+         <h3 class= "content-part-corporate-page">Content</h3>
+		  </div>
+		  </div>
+		 <!--end of title of the container--> 
+		 <!--start of brand name and logo part-->
+         <div class="container">
+           <div class="row d-flex align-items-center">
+             <div class="col-12 col-md-6 col-xl-4">
+               <h3 class="subheadings-content-part-corporate-page">Brand Name</h3>
+		       <p>The brand name is <strong>OutnCenter</strong>. It is a play on Front Center but using Out instead of Front for LGBTQ+ visibility.</p>
+			   <h3 class="subheadings-content-part-corporate-page">Logo</h3>
+	          <div class="col-12 col-md-6 col-xl-4 text-center">
+            <img src="images/logo-out-n-center/logo-vertical-out-n-center.jpeg" alt="outncenter" class="img-fluid logo-corporate-page">
+          </div>
+        </div>
+      </div>
+     </div>
+	 <!--end of brand name and logo part-->
+	 <!--start of brand vision-->
+	 <h3 class="subheadings-content-part-corporate-page">Brand vision</h3>
+	 <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at centre stage deserves to be out and proud.</p>
+	 <!--end of brand vision--> 
+	  
+	 <!--start of brand values-->
+    <div class="col-12 col-md-6 col-xl-4">
+      <h3 class="subheadings-content-part-corporate-page">Values</h3>
+          <ul>
+            <li><strong>Authenticity</strong> - We are committed to authenticity, and proudly celebrating Lgbtq+ voices in theatre.</li>
+            <li> <strong>Learning</strong> - Engaging with our brand means always discovering something new.</li>
+            <li><strong>Inclusivity</strong>- We welcome all who support and engage with Lgbtq+ theatre.</li>
+          </ul>
+        </div>
+        <!--end of brand values-->
+	    
+	    <!--start of brand persona-->
+	    <h3 class="subheadings-content-part-corporate-page">Brand Persona</h3>
+	    <img src="images/corporate-page-images/brand persona-image/brand-persona.jpg" alt="brand persona" class="img-fluid">
+	    <!--end of brand persona-->
+	    
+	    <!--start of visual identity-->
+	    <h3 class="subheadings-content-part-corporate-page">Visual Identity</h3>
+	    <!--end of visual identity-->
+	  
+	    <!--start of supporting visuals-->
+	    <h3 class="subheadings-content-part-corporate-page">Supporting Visuals</h3>
+	    <!--end of supporting visuals-->
+	  
+	  
+    <!--end container for content-->
   </main>
   <!--main for your content stops here-->
 
-  <!--footer navigation starts here-->
-  <footer>
+<!--footer navigation starts here-->
+   <footer class="bg-blue text-white py-4">
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h5>outncenter</h5>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-3">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="large-logo justify-content-start">
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!--footer ends here-->
+        <div class="row">
+            <!-- Brand Logo & Name -->
+            <div class="col-md-4 text-center text-md-start">
+                <img src="images/onc_notext2.svg" alt="Brand Logo" style="height: 50px;">
+                <h5 class="mt-2">outncenter</h5>
+            </div>
 
-  <!--your script starts here-->
+            <!-- Contact Information -->
+            <div class="col-md-4 text-center footer2">
+                <h5>Contact</h5>
+                <p><a href="mailto:outncenter@gmail.com" style="text-decoration: none;  color: white;">outncenter@gmail.com</a></p>
+                <p>Phone: +31 6 20 87 45 1</p>
+                <p>Address: 12 Grote Markt, Breda</p>
+            </div>
+
+            <!-- Explore (Navigation Links) -->
+            <div class="col-md-4 text-center text-md-end">
+                <h5>Explore</h5>
+                <ul class="list-unstyled footer2">
+                    <li><a href="index.html" style="text-decoration: none;  color: white;">Home Page</a></li>
+                    <li><a href="about.html" style="text-decoration: none;  color: white;">About</a></li>
+                    <li><a href="blog.html" style="text-decoration: none;  color: white;">Blog</a></li>
+                    <li><a href="profile.html" style="text-decoration: none;  color: white;">Profile</a></li>
+					<li><a href="corporate.html" style="text-decoration: none;  color: white;">Corporate</a></li>
+                </ul>
+            </div>
+        </div>
+		<div class="text-center mt-3">
+            <a href="https://www.tiktok.com/@outncenter._?_t=ZN-8vDfVe41V8o&_r=1" target="_blank" class="text-white me-3">
+                <i class="bi bi-tiktok" style="font-size: 1.5rem;"></i>
+            </a>
+            <a href="https://www.instagram.com/outncenter._?igsh=bTAydDhpemxuNXJs" target="_blank" class="text-white">
+                <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
+            </a>
+        </div>
+        <hr class="my-3 border-light">
+        <p class="text-center footer2 mb-0">© 2025 outncenter. All Rights Reserved.</p>
+    </div>
+	  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+</footer>
+  <!--footer ends here-->
+<!--your script starts here-->
   <script>
   </script>
   <!--your script ends here-->
